# all-in-one

./: .cursorrules  .gitignore  .hermes.md  CLAUDE.md  NYU.md  gcp_audio_transcriber.py  main.py  pyproject.toml  temo.md  transcribe_youtube_playlist.py  处理进度.md  课程学习进度清单.md  课程清单.md
.obsidian/: workspace.json
002期货与期权/: 000指令.md  001课程概述.md  002衍生品.md
003工作流/: 001笔记.md
01_Permanent/: Comprehensive_Finance_Curriculum.md  金融经济学总知识地图_MOC.md
999小妙招/: 001.md
Valuation/: 01_Valuation_A_Preview.md
scripts/: subtitle_first.py
投资笔记/: 001.md
期货与期权/: 01-09_合并转写.txt  01_期货与期权课程总体介绍.md  02_衍生品的概念与功能.md  03_衍生品类型.md  04_衍生品市场.md  05_衍生品历史发展.md  06_衍生品蓬勃发展的原因.md  07_真实衍生品业务.md  08_衍生品亏损案例.md  09_衍生品市场的显著事件.md  10_外汇远期.md  11_NDF和远期利率协议.md  12_远期利率协议场外游戏.md  13_期货合约.md  14_期权合约.md  15_交易者类型.md  16_利率互换.md  17_外汇互换.md  18_内地衍生品市场.md  19_远期利率协议场外游戏讨论.md  20_期货市场机制.md  21_期货合约条款.md  22_期货保证金计算.md  23_期货市场监管.md  24_期货交易所——Wind展示.md  25_套期保值原理.md  26_套期保值类型及举例.md  27_套期保值真实案例.md  28_外汇市场套期保值作业分析.md  29_金融期货的发展历史.md  30_金融期货主要合约及条款.md  31_运用金融期货合约投机与对冲.md  32_境外交易所真实合约条款展示.md  33_内地交易所真实合约条款展示.md  34_计日惯例与货币市场工具的报价.md  35_资本市场工具的期货市场报价及其转换因子.md  36_欧洲美元期货.md  37_期货市场机制及合约条款复习.md  38_期权的类型.md  39_期权种类的扩展.md  (+26 more)
机器学习-youtube1/: 01_1 行为经济学导言.md  02_2 1有效市场假说.md  03_2 2套利的有限性.md  04_3 1预期效用理论.md  05_3 2阿莱悖论.md  06_4 1前景理论.md  07_4 2框架效应.md  08_4 3风险态度的四重性.md  09_4 4心理账户.md  10_4 5交易效用.md  11_4 6沉没成本.md  12_5 认知偏差.md  13_6 1过度自信.md  14_6 2过度自信和金融决策.md  15_6 3模糊厌恶和羊群效应.md  16_6 4时间偏好.md  18_7 2过度波动之谜.md  19_7 3规模效应与账面市值比效应.md  20_7 4动量效应与反转效应（一）.md  22_8 1投资者情绪与资产价格过度波动.md  _index.md  (+1 more)
(+696 files in other folders)
