[project]
name = "all-in-one"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-cloud-storage>=3.10.1",
    "google-genai>=2.2.0",
    "mlx-whisper>=0.4.3",
    "notebooklm-py>=0.4.1",
    "playwright>=1.59.0",
    "youtube-transcript-api>=1.2.4",
    "yt-dlp>=2026.3.17",
]
